[metadata]
name = orchard
summary = 'adapter for 3rd-party provider clouds'
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7


[files]
packages =
    code/cloudmanager
data_files =
    /home/hybrid_cloud/ = etc/hybrid_cloud/*
    

[install]
prefix=/
install-purelib=/usr/lib64/python2.6/site-packages/
install_scripts=/usr/bin/




